// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookin Builder Custom Item actions Returns the correct object literals 1`] = `
Object {
  "type": "bookingBuilder/customItem/SHOW_CUSTOM_ITEM_FORM",
}
`;

exports[`Bookin Builder Custom Item actions Returns the correct object literals 2`] = `
Object {
  "type": "bookingBuilder/customItem/HIDE_CUSTOM_ITEM_FORM",
}
`;

exports[`Bookin Builder Custom Item actions Returns the correct object literals 3`] = `
Object {
  "type": "bookingBuilder/customItem/UPDATE_CUSTOM_ITEM_NAME",
  "value": "sample name",
}
`;

exports[`Bookin Builder Custom Item actions Returns the correct object literals 4`] = `
Object {
  "type": "bookingBuilder/customItem/UPDATE_CUSTOM_ITEM_TOTAL",
  "value": "10.00",
}
`;

exports[`Bookin Builder Custom Item actions Returns the correct object literals 5`] = `
Object {
  "type": "bookingBuilder/customItem/UPDATE_CUSTOM_ITEM_DESCRIPTION",
  "value": "sample description",
}
`;

exports[`Bookin Builder Custom Item actions Returns the correct object literals 6`] = `
Object {
  "type": "bookingBuilder/customItem/UPDATE_CUSTOM_ITEM_COUNTS_AS_MEAL_PLAN",
  "value": true,
}
`;

exports[`Bookin Builder Custom Item actions Returns the correct object literals 7`] = `
Object {
  "type": "bookingBuilder/customItem/UPDATE_CUSTOM_ITEM_COUNTS_AS_TRANSFER",
  "value": true,
}
`;
